# PorcineBTMs_Methods

./: .gitignore  README.md
workingEnvironment/: readme.md
workingEnvironment/02_counts/: read_counts.r
workingEnvironment/03_network/: README_GPU.md  README_LOGGING.md  README_python.md  SETUP_SUMMARY.md  clr_gpu.py  generate_net.r  generate_net_python.py  generate_net_python_pval.py  run_network_analysis.sh  run_network_gpu.sh  run_network_minimal.sh  slurm_16509114_network_analysis.out  submit_pval_job.sh  (+14 more)
workingEnvironment/03_network/NETS_MI_PVAL_v2/: README.md  pyproject.toml  run_pipeline.py  run_whole_dataset_histogram_mi.sh
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/: README.md  process_study.py  submit_array_jobs.sh
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/job_array_run_1774604247/: array_job.slurm
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/job_array_run_1774606708/: array_job.slurm
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/job_array_run_1774859192/: array_job.slurm
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/job_array_run_1774861147/: array_job.slurm
workingEnvironment/03_network/NETS_MI_PVAL_v2/arrayized_run/output/array_run_1774606708/studies/study_14/study_14_results/gmt_cache/: WikiPathway_2023_Human.gmt
workingEnvironment/03_network/NETS_MI_PVAL_v2/mine_network/: io_utils.py  mcode.py  mine_estimator.py  network_viz.py  ortholog.py  permutation.py  pipeline.py  qc_plots.py
workingEnvironment/03_network/NETS_MI_PVAL_v2/mine_network.egg-info/: PKG-INFO
(+32 files in other folders)
